# zkeleton-hs

./: CHANGELOG.md  zkeleton.cabal
src/: Main.hs
src-lib/: HTMLGenerator.hs  ZBase.hs  ZData.hs  ZHTML.hs  ZStructure.hs
test/: ZTestSuite.hs
