cabal-version:      2.4
name:               zkeleton
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             zach
maintainer:         zacharyzjp@gmail.com

-- A copyright notice.
-- copyright:
category:           skeleton
extra-source-files: CHANGELOG.md

library
    exposed-modules:  ZBase, ZData, ZHTML, ZStructure

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                      , array
                      , aeson
    hs-source-dirs:   src-lib
    default-language: Haskell2010

executable zkeleton
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        zkeleton

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite zkeleton-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          ZTestSuite.hs
    build-depends:    base ^>=4.17.2.1,
                       test-framework >= 0.3 && < 0.9,
                       test-framework-hunit >= 0.2 && < 0.4,
                       test-framework-quickcheck2 >= 0.2.9 && < 0.4,
                       QuickCheck >= 2.10 && < 2.15,
                       HUnit >= 1.2 && < 1.7,
                       zkeleton,
                       aeson,
                       bytestring
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N -Wall -O2
